methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:26: error: Unmatched closing brace '}' ignored here
  }
  ^PatternPicture:28: error: ')' expected but '}' found.
        }} 
        ^